[gd_scene load_steps=6 format=3 uid="uid://ddsdwjtdxq0ac"]

[ext_resource type="Script" uid="uid://d226tm4u4o0wg" path="res://Level/Scenes/levelSwitcher.gd" id="1_1nua6"]
[ext_resource type="Script" uid="uid://dinw0aggyrx2n" path="res://Level/Sripts/GitHubButton.gd" id="2_1i5fg"]
[ext_resource type="Texture2D" uid="uid://c188iwaj2g3tk" path="res://Level/spriteLists/1200-1581188533.webp" id="2_1nua6"]

[sub_resource type="LabelSettings" id="LabelSettings_1i5fg"]
line_spacing = -8.0
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_1uq15"]
line_spacing = -6.0
font_size = 20

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 6.0
offset_right = 11.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1nua6")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(691, -140)
motion_mirroring = Vector2(1152, 648)

[node name="BackgroundTexture" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_left = -689.0
offset_top = 150.0
offset_right = 463.0
offset_bottom = 798.0
stretch_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(956, 527)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="12001581188533" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(-3851, 2701.0002)
scale = Vector2(-27.596424, 14.963606)
texture = ExtResource("2_1nua6")

[node name="Buttons" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 1.0
offset_right = 7.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(639, 383)

[node name="MenuVBox" type="VBoxContainer" parent="CanvasLayer/Buttons"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GameName" type="Label" parent="CanvasLayer/Buttons/MenuVBox"]
layout_mode = 2
text = "Galaxy Jumper"
label_settings = SubResource("LabelSettings_1i5fg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Buttons/MenuVBox"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 0
script = ExtResource("2_1i5fg")

[node name="Label" type="Label" parent="CanvasLayer/Buttons/MenuVBox/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Git
Hub"
label_settings = SubResource("LabelSettings_1uq15")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer/Buttons/MenuVBox"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Buttons/MenuVBox"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="CanvasLayer/Buttons/MenuVBox"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "Credits"

[node name="LevelSelectVBox" type="VBoxContainer" parent="CanvasLayer/Buttons"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Buttons/LevelSelectVBox"]
layout_mode = 2
text = "Select Level"
label_settings = SubResource("LabelSettings_1i5fg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TestButton1" type="Button" parent="CanvasLayer/Buttons/LevelSelectVBox"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "Level 1"

[node name="TestButton2" type="Button" parent="CanvasLayer/Buttons/LevelSelectVBox"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "Level 2"

[node name="TestButton3" type="Button" parent="CanvasLayer/Buttons/LevelSelectVBox"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "Level 3"

[node name="BackButton" type="Button" parent="CanvasLayer/Buttons/LevelSelectVBox"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "Back"

[node name="SettingsDialog" type="AcceptDialog" parent="CanvasLayer"]
oversampling_override = 1.0
title = "Settings"
initial_position = 2
size = Vector2i(200, 100)
dialog_text = "Beta Test иди нахуй"
